example, style-generator: Upgrade deps, switch to Vite

--- a/examples/package.json
+++ b/examples/package.json
@@ -1,20 +1,21 @@
 {
   "name": "elm-mapbox-examples",
+  "type": "module",
   "version": "1.0.0",
   "description": "Examples for the elm-mapbox package",
   "main": "index.js",
   "scripts": {
-    "test": "parcel test",
-    "start": "parcel index.html"
+    "start": "vite",
+    "build": "vite build"
   },
   "author": "Jakub Hampl",
   "license": "MIT",
-  "devDependencies": {
-    "elm-hot": "^1.0.1",
-    "parcel-bundler": "^1.11.0"
-  },
   "dependencies": {
-    "elm-mapbox": "^3.1.1",
-    "mapbox-gl": "^0.53.0"
+    "elm-mapbox": "file:..",
+    "mapbox-gl": "^3.10.0"
+  },
+  "devDependencies": {
+    "vite": "^6.2.3",
+    "vite-plugin-elm-watch": "^1.4.2"
   }
 }
