--- a/package.json
+++ b/package.json
@@ -34,17 +34,17 @@
   },
   "homepage": "https://github.com/adaptivsystems/elm-mapbox#readme",
   "devDependencies": {
+    "@lydell/elm": "^0.19.1-14",
     "@rollup/plugin-typescript": "^12.1.2",
-    "elm": "^0.19.1-6",
-    "elm-format": "^0.8.7",
-    "elm-test": "^0.19.1-revision15",
-    "prettier": "^3.5.3",
-    "rollup": "^4.37.0",
+    "elm-format": "^0.8.8",
+    "elm-test": "^0.19.1-revision16",
+    "prettier": "^3.6.2",
+    "rollup": "^4.45.0",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "mapbox-gl": "^3.10.0"
+    "mapbox-gl": "^3.13.0"
   },
   "prettier": {
     "tabWidth": 2
